--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,10 +1,11 @@
 {
-	"appId": "com.ANTHONYM.APPNAME",
-	"appName": "blankapp",
+	"appId": "com.ANTHONYM.type2speak",
+	"appName": "type2speak",
 	"bundledWebRuntime": false,
-	"npmClient": "yarn",
+	"npmClient": "npm",
 	"webDir": "www",
-	"linuxAndroidStudioPath": "/usr/bin/android-studio",
+	"linuxAndroidStudioPath": "/opt/android-studio/bin/studio.sh",
+	"CAPACITOR_ANDROID_STUDIO_PATH": "/opt/android-studio/bin/studio.sh",
 	"plugins": {
 		"SplashScreen": {
 			"launchShowDuration": 0
